# HDR-Auto

./: Cargo.toml  README.md  build.rs  games_default.txt
src/: main.rs
