[package]
name = "hdr-auto"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "shellapi",
    "synchapi",
    "tlhelp32",
    "unknwnbase",
    "winerror",
    "winnt",
    "winreg",
    "winuser",
    "wingdi",
] }

[build-dependencies]
winres = "0.1"
